# CVND_Localization_Exercises

./: CMakeLists.txt
4_2_Robot_Localization/: CMakeLists.txt
4_2_Robot_Localization/sources/: 1-1D_Robot_World.cpp  1_2-Probability_After_Sense.cpp  1_3-Sense_Function.cpp  3-Sense_Function.cpp  4-Multiple_measurements.cpp  5-Move_function.cpp  6-Inexact_move.cpp  7-Multiple_moves.cpp
4_3_2D_Histogram_Filter/: CMakeLists.txt  main.cpp  writeup.py
4_3_2D_Histogram_Filter/include/: localizer.hpp  simulator.hpp
4_3_2D_Histogram_Filter/sources/: localizer.cpp  simulator.cpp
