add_executable(1D_robot_world ${CMAKE_CURRENT_SOURCE_DIR}/sources/1-1D_Robot_World.cpp)
add_executable(Probability_after_sense ${CMAKE_CURRENT_SOURCE_DIR}/sources/2-Probability_After_Sense.cpp)
add_executable(Sense_Function ${CMAKE_CURRENT_SOURCE_DIR}/sources/3-Sense_Function.cpp)
add_executable(Multiple_Measurements ${CMAKE_CURRENT_SOURCE_DIR}/sources/4-Multiple_measurements.cpp)
add_executable(Move_function ${CMAKE_CURRENT_SOURCE_DIR}/sources/5-Move_function.cpp)
add_executable(Inexact_move ${CMAKE_CURRENT_SOURCE_DIR}/sources/6-Inexact_move.cpp)
add_executable(Multiple_moves ${CMAKE_CURRENT_SOURCE_DIR}/sources/7-Multiple_moves.cpp)
